--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         function exportData() {
             const data = {
                 metadata: {
-                    software: "CoEx Cocoa Inspector Vanilla",
+                    software: "Cocoa Inspector Vanilla",
                     version: "1.0",
                     timestamp: new Date().toISOString()
                 },
@@ -315,4 +315,3 @@
     </script>
 </body>
 </html>
-
