--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -180,7 +179,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4" />
                 </svg>
-                Salvar no BeanTrace
+                Salvar
             </button>
         </div>
 
@@ -214,13 +213,13 @@
         };
 
         // Supabase Configuration
-        // Substituto pelos seus dados reais
-        const SUPABASE_URL = 'SUA_URL_DO_SUPABASE'; 
-        const SUPABASE_KEY = 'SUA_ANON_KEY_DO_SUPABASE';
+        // Updated to the correct REST endpoint provided
+        const SUPABASE_URL = 'https://yutecuapyojobehwjarx.supabase.co'; 
+        const SUPABASE_KEY = 'SUA_ANON_KEY_DO_SUPABASE'; // Mantendo placeholder por segurança conforme instruído
         let supabaseClient = null;
 
-        // Tenta inicializar se as chaves forem providenciadas
-        if (SUPABASE_URL !== 'SUA_URL_DO_SUPABASE' && typeof supabase !== 'undefined') {
+        // Tenta inicializar se o script estiver presente e as chaves configuradas
+        if (typeof supabase !== 'undefined' && SUPABASE_URL !== '' && SUPABASE_KEY !== 'SUA_ANON_KEY_DO_SUPABASE') {
             supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
         }
 
@@ -311,7 +310,7 @@
 
         async function saveToDatabase() {
             if (!supabaseClient) {
-                alert("❌ Erro: Configuração do Supabase incompleta (URL ou Key faltantes no código).");
+                alert("❌ Erro: Configuração do Supabase incompleta ou incorreta no código (verifique a URL e a Anon Key).");
                 return;
             }
 
@@ -340,7 +339,7 @@
 
                 if (error) throw error;
 
-                alert("✅ Inspeção salva com sucesso no BeanTrace!");
+                alert("✅ Inspeção salva com sucesso no banco de dados!");
             } catch (error) {
                 console.error('Erro:', error);
                 alert("❌ Erro ao salvar: " + error.message);
