--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         // Supabase Configuration
         // Updated to the correct REST endpoint provided
         const SUPABASE_URL = 'https://yutecuapyojobehwjarx.supabase.co'; 
-        const SUPABASE_KEY = 'sb_publishable_SSS3She-kjSJj2BIHdQ30g_myPzPDM5'; // Mantendo placeholder por segurança conforme instruído
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl1dGVjdWFweW9qb2JlaHdqYXJ4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwMDM4NTcsImV4cCI6MjA4MzU3OTg1N30.1W6bPbzyk0xiaQK2bzb2YMfC8Ch4axx8MWqwEXnnXcY'; // Mantendo placeholder por segurança conforme instruído
         let supabaseClient = null;
 
         // Tenta inicializar se o script estiver presente e as chaves configuradas
@@ -404,4 +404,5 @@ Gerado em: ${new Date().toLocaleString()}
     </script>
 </body>
 </html>
+
 
