--- a/dashboard.html
+++ b/dashboard.html
@@ -34,7 +34,7 @@
     <script>
         const SUPABASE_URL = 'https://yutecuapyojobehwjarx.supabase.co';
         const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl1dGVjdWFweW9qb2JlaHdqYXJ4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwMDM4NTcsImV4cCI6MjA4MzU3OTg1N30.1W6bPbzyk0xiaQK2bzb2YMfC8Ch4axx8MWqwEXnnXcY';
-        const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+        const supabaseClient = supabase.createClient(https://yutecuapyojobehwjarx.supabase.co, eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl1dGVjdWFweW9qb2JlaHdqYXJ4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwMDM4NTcsImV4cCI6MjA4MzU3OTg1N30.1W6bPbzyk0xiaQK2bzb2YMfC8Ch4axx8MWqwEXnnXcY);
 
         async function carregarDados() {
             const { data, error } = await supabaseClient
