--- a/beantrace.html
+++ b/beantrace.html
@@ -25,6 +25,15 @@
         <button onclick="logout()" class="text-xs font-bold text-red-500 border border-red-100 px-4 py-2 rounded-xl hover:bg-red-50 transition">
             <i class="fas fa-sign-out-alt mr-1"></i> SAIR
         </button>
+        <div class="flex items-center gap-3">
+            <a href="dashboard.html" class="text-xs font-bold text-emerald-600 border border-emerald-100 px-4 py-2 rounded-xl hover:bg-emerald-50 transition flex items-center gap-2">
+                <i class="fas fa-chart-line"></i> DASHBOARD
+            </a>
+
+            <button onclick="logout()" class="text-xs font-bold text-red-500 border border-red-100 px-4 py-2 rounded-xl hover:bg-red-50 transition">
+                <i class="fas fa-sign-out-alt"></i> SAIR
+            </button>
+        </div>
     </header>
 
     <main class="max-w-4xl mx-auto px-4 mt-8 space-y-8">
