--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <title>BeanTrace Dashboard | Mahiange</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
@@ -19,12 +20,14 @@
     <nav class="bg-white border-b border-slate-200 sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 h-20 flex items-center justify-between">
             <div>
-                <h1 class="text-2xl font-black text-slate-800 tracking-tighter">BEAN<span class="text-emerald-600">TRACE</span></h1>
-                <p class="text-[10px] uppercase font-bold text-slate-400 tracking-widest">Painel de Qualidade Mahiange</p>
+                <h1 class="text-2xl font-black text-slate-800 tracking-tighter uppercase">Bean<span class="text-emerald-600">Trace</span></h1>
+                <p class="text-[10px] uppercase font-bold text-slate-400 tracking-widest">Painel de Controle de Qualidade</p>
             </div>
-            <div class="flex gap-3">
-                <a href="beantrace.html" class="bg-emerald-600 text-white px-5 py-2.5 rounded-xl font-bold text-sm hover:bg-emerald-700 transition-all flex items-center gap-2">
-                    <i class="fas fa-plus"></i> Nova Inspeção
+            
+            <div class="flex items-center gap-4">
+                <a href="beantrace.html" class="flex items-center gap-2 bg-emerald-600 text-white px-5 py-2.5 rounded-xl font-bold text-sm hover:bg-emerald-700 shadow-lg shadow-emerald-100 transition-all">
+                    <i class="fas fa-plus-circle"></i>
+                    <span>Nova Inspeção</span>
                 </a>
             </div>
         </div>
@@ -42,19 +45,21 @@
                 <p id="stat-fermentation" class="text-3xl font-black text-amber-600">--%</p>
             </div>
             <div class="stat-card bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-                <p class="text-[10px] font-black text-slate-400 uppercase mb-1">Origem mais Frequente</p>
+                <p class="text-[10px] font-black text-slate-400 uppercase mb-1">Origem Dominante</p>
                 <p id="stat-provider" class="text-xl font-black text-slate-700 truncate">--</p>
             </div>
              <div class="stat-card bg-white p-6 rounded-2xl shadow-sm border border-slate-100">
-                <p class="text-[10px] font-black text-slate-400 uppercase mb-1">Status Geral</p>
-                <p id="stat-status" class="text-xl font-black text-emerald-600 tracking-tight">OPERACIONAL</p>
+                <p class="text-[10px] font-black text-slate-400 uppercase mb-1">Status do Sistema</p>
+                <p class="text-sm font-bold text-emerald-600 flex items-center gap-2">
+                    <span class="w-2 h-2 bg-emerald-500 rounded-full animate-ping"></span> Sincronizado
+                </p>
             </div>
         </div>
 
         <div class="bg-white p-8 rounded-3xl border border-slate-200 shadow-sm mb-10">
             <h2 class="text-lg font-bold text-slate-800 mb-8 flex items-center gap-2">
-                <span class="w-1.5 h-5 bg-emerald-500 rounded-full"></span>
-                Evolução do Índice de Fermentação (Últimos Lotes)
+                <i class="fas fa-chart-line text-emerald-500"></i>
+                Evolução da Qualidade (Últimos Lotes)
             </h2>
             <div class="h-[320px] w-full">
                 <canvas id="qualityChart"></canvas>
@@ -62,25 +67,28 @@
         </div>
 
         <div class="bg-white rounded-3xl border border-slate-200 shadow-sm overflow-hidden">
-            <div class="px-8 py-6 border-b border-slate-100 bg-slate-50/50">
-                <h2 class="text-lg font-bold text-slate-800">Registros no Banco de Dados</h2>
+            <div class="px-8 py-6 border-b border-slate-100 bg-slate-50/50 flex justify-between items-center">
+                <h2 class="text-lg font-bold text-slate-800">Todos os Registros</h2>
+                <button onclick="window.location.reload()" class="text-xs font-bold text-slate-400 hover:text-emerald-600 transition">
+                    <i class="fas fa-sync-alt mr-1"></i> Atualizar
+                </button>
             </div>
             <div class="overflow-x-auto">
                 <table class="w-full text-left text-sm">
                     <thead>
-                        <tr class="bg-slate-50/30 text-[10px] font-black text-slate-400 uppercase">
+                        <tr class="bg-slate-50/30 text-[10px] font-black text-slate-400 uppercase tracking-widest">
                             <th class="px-8 py-4">Data</th>
                             <th class="px-8 py-4">Lote</th>
                             <th class="px-8 py-4">Origem</th>
-                            <th class="px-8 py-4 text-center">Índice</th>
-                            <th class="px-8 py-4">Status</th>
+                            <th class="px-8 py-4 text-center">Fermentação</th>
+                            <th class="px-8 py-4">Resultado</th>
                         </tr>
                     </thead>
-                    <tbody id="inspections-table-body" class="divide-y divide-slate-100">
+                    <tbody id="inspections-table-body" class="divide-y divide-slate-100 text-slate-700">
                         </tbody>
                 </table>
-                <div id="loading-overlay" class="py-10 text-center text-slate-400 font-bold animate-pulse">
-                    CONECTANDO AO SUPABASE...
+                <div id="loading-overlay" class="py-20 text-center text-slate-400 font-bold animate-pulse text-xs uppercase">
+                    Buscando dados no Supabase...
                 </div>
             </div>
         </div>
@@ -95,79 +103,101 @@
 
         let chartInstance = null;
 
-        async function init() {
+        async function checkSession() {
+            const { data: { session } } = await supabase.auth.getSession();
+            if (!session) {
+                window.location.href = 'login.html';
+            }
+        }
+
+        async function loadData() {
+            await checkSession();
+
             const { data, error } = await supabase
                 .from('inspections')
                 .select('*')
                 .order('created_at', { ascending: false });
 
             if (error) {
-                console.error("Erro:", error);
+                console.error("Erro ao buscar dados:", error);
+                document.getElementById('loading-overlay').innerText = "Erro ao carregar dados.";
                 return;
             }
 
             document.getElementById('loading-overlay').classList.add('hidden');
-            renderDashboard(data);
+            renderUI(data);
         }
 
-        function renderDashboard(data) {
-            if (!data.length) return;
+        function renderUI(data) {
+            if (!data || data.length === 0) {
+                document.getElementById('loading-overlay').classList.remove('hidden');
+                document.getElementById('loading-overlay').innerText = "Nenhuma inspeção encontrada.";
+                return;
+            }
 
-            // 1. Estatísticas Rápidas
-            const avgFerment = data.reduce((a, b) => a + (b.fermentation_index || 0), 0) / data.length;
-            const providers = data.map(d => d.origin);
-            const topProvider = providers.sort((a,b) => providers.filter(v => v===a).length - providers.filter(v => v===b).length).pop();
+            // Estatísticas
+            const total = data.length;
+            const avg = data.reduce((a, b) => a + (b.fermentation_index || 0), 0) / total;
+            const origins = data.map(d => d.origin);
+            const mostCommonOrigin = origins.sort((a,b) => origins.filter(v => v===a).length - origins.filter(v => v===b).length).pop();
 
-            document.getElementById('stat-count').innerText = data.length;
-            document.getElementById('stat-fermentation').innerText = Math.round(avgFerment) + '%';
-            document.getElementById('stat-provider').innerText = topProvider || "N/A";
+            document.getElementById('stat-count').innerText = total;
+            document.getElementById('stat-fermentation').innerText = Math.round(avg) + '%';
+            document.getElementById('stat-provider').innerText = mostCommonOrigin || "N/A";
 
-            // 2. Preencher Tabela
+            // Tabela
             const tbody = document.getElementById('inspections-table-body');
-            tbody.innerHTML = data.slice(0, 10).map(ins => `
-                <tr class="hover:bg-slate-50">
-                    <td class="px-8 py-5 text-slate-500">${new Date(ins.created_at).toLocaleDateString()}</td>
-                    <td class="px-8 py-5 font-mono font-bold">${ins.batch_id}</td>
+            tbody.innerHTML = data.map(ins => `
+                <tr class="hover:bg-slate-50 transition">
+                    <td class="px-8 py-5 text-slate-400 font-medium">${new Date(ins.created_at).toLocaleDateString()}</td>
+                    <td class="px-8 py-5 font-mono text-xs font-bold text-slate-600">${ins.batch_id}</td>
                     <td class="px-8 py-5 font-bold">${ins.origin}</td>
                     <td class="px-8 py-5 text-center font-black text-emerald-600">${ins.fermentation_index}%</td>
                     <td class="px-8 py-5">
-                        <span class="px-3 py-1 rounded-full text-[10px] font-bold ${ins.fermentation_index >= 70 ? 'bg-emerald-100 text-emerald-700' : 'bg-amber-100 text-amber-700'}">
-                            ${ins.fermentation_index >= 70 ? 'QUALIDADE A' : 'MONITORAR'}
+                        <span class="px-3 py-1 rounded-lg text-[10px] font-black uppercase ${ins.fermentation_index >= 70 ? 'bg-emerald-100 text-emerald-700' : 'bg-amber-100 text-amber-700'}">
+                            ${ins.fermentation_index >= 70 ? 'Aprovado' : 'Atenção'}
                         </span>
                     </td>
                 </tr>
             `).join('');
 
-            // 3. Gráfico de Linha
+            // Gráfico
+            renderChart(data);
+        }
+
+        function renderChart(data) {
             const ctx = document.getElementById('qualityChart').getContext('2d');
-            const last10 = [...data].reverse().slice(-10);
-            
+            const lastLotes = [...data].reverse().slice(-12);
+
             if (chartInstance) chartInstance.destroy();
+
             chartInstance = new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: last10.map(d => d.batch_id),
+                    labels: lastLotes.map(d => d.batch_id),
                     datasets: [{
-                        label: 'Índice de Fermentação %',
-                        data: last10.map(d => d.fermentation_index),
+                        label: 'Índice de Fermentação',
+                        data: lastLotes.map(d => d.fermentation_index),
                         borderColor: '#10b981',
                         backgroundColor: 'rgba(16, 185, 129, 0.1)',
+                        borderWidth: 4,
                         fill: true,
-                        tension: 0.4,
-                        borderWidth: 4
+                        tension: 0.4
                     }]
                 },
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
+                    plugins: { legend: { display: false } },
                     scales: {
-                        y: { beginAtZero: true, max: 100 }
+                        y: { beginAtZero: true, max: 100, ticks: { font: { size: 10, weight: 'bold' } } },
+                        x: { ticks: { font: { size: 10, weight: 'bold' } } }
                     }
                 }
             });
         }
 
-        init();
+        loadData();
     </script>
 </body>
 </html>
